# pilot-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  LICENSE  README 2.md  README.md  SECURITY.md  config.yaml.example  devagent-dev  docker-compose.yml  install.ps1  install.sh  pilot-agent-dev  pyproject.toml  setup-dev.sh
.github/workflows/: ci.yml  docker.yml  release.yml
devagent/: __init__.py
devagent/agent/: context.py  loop.py  memory.py  phases.py  prompts.py  state.py  types.py
devagent/backends/: __init__.py  docker.py  factory.py  local.py
devagent/cli/: __init__.py  __main__.py  doctor.py  main.py  setup_wizard.py
devagent/config/: credentials.py  defaults.yaml  schema.py
devagent/providers/: __init__.py  anthropic.py  base.py  openai.py  openrouter.py
devagent/skills/: registry.py
docs/: architecture.md  cli-reference.md  configuration.md  demo.tape  docker.md  memory.md  quickstart.md  skills.md
pilot_agent/: __init__.py
scripts/: live_acceptance.py  run_tests.sh  smoke_e2e.sh
tests/: conftest.py  test_acceptance_blueprints.py  test_backends_settings.py  test_cli_loop.py  test_config_onboarding.py  test_context.py  test_doctor_status.py  test_gateway.py  test_install_docs.py  test_integration_smoke.py  test_iteration_budget.py  test_memory.py  test_providers.py  test_runtime_hardening.py  test_setup_model.py  test_skills.py  test_tools.py  test_types.py  test_ui_console.py
web/: Pilot Agent.html  package-lock.json  package.json  tsconfig.json
(+111 files in other folders)
