[project]
name = "devagent"
version = "0.1.0"
description = "Local CLI agent that takes an idea to a deployed MVP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.71.0",
  "httpx>=0.28.0",
  "jsonschema>=4.25.0",
  "openai>=2.0.0",
  "pydantic-settings>=2.12.0",
  "pyyaml>=6.0.2",
  "requests>=2.32.0",
  "rich>=14.0.0",
  "tenacity>=9.1.0",
  "tiktoken>=0.12.0",
  "typer>=0.20.0",
]

[project.scripts]
devagent = "devagent.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pre-commit>=4.0.0",
  "pytest>=9.0.0",
  "pytest-mock>=3.15.0",
  "ruff>=0.14.0",
  "types-pyyaml>=6.0.12",
  "types-requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
